# !tyml @cargo/Cargo
[workspace]
resolver = "2"
members = [
    "src/tyml",
    "src/tyml_diagnostic",
    "src/tyml_generator",
    "src/tyml_grammar",
    "src/tyml_lsp",
    "src/tyml_parser",
    "src/tyml_source",
    "src/tyml_type",
    "src/tyml_validate",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
