[package]
name = "tyml"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tyml"
path = "src/bin/tyml.rs"

[dependencies]
tyml_diagnostic = { path = "../tyml_diagnostic/" }
tyml_generator = { path = "../tyml_generator/" }
tyml_grammar = { path = "../tyml_grammar/" }
tyml_parser = { path = "../tyml_parser/" }
tyml_source = { path = "../tyml_source/" }
tyml_type = { path = "../tyml_type/" }
tyml_validate = { path = "../tyml_validate/" }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
either = "1.13.0"
hashbrown = "0.15.2"
shellexpand = "3.1.1"
regex = "1.11.1"
