# !tyml @cargo/Cargo
[package]
name = "tyml_core"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[[bin]]
name = "tyml"
path = "src/bin/tyml.rs"

[dependencies]
tyml_diagnostic = { path = "../tyml_diagnostic/", version = "0.1.10" }
tyml_formatter = { path = "../tyml_formatter/", version = "0.1.8" }
tyml_generator = { path = "../tyml_generator/", version = "0.1.10" }
tyml_grammar = { path = "../tyml_grammar/", version = "0.1.8" }
tyml_parser = { path = "../tyml_parser/", version = "0.1.9" }
tyml_source = { path = "../tyml_source/", version = "0.1.8" }
tyml_type = { path = "../tyml_type/", version = "0.1.5" }
tyml_validate = { path = "../tyml_validate/", version = "0.1.9" }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
either = "1.13.0"
hashbrown = "0.15.2"
shellexpand = "3.1.1"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
fs2 = "0.4"
sha2 = "0.10"
dirs = "5"
tokio = { version = "1.44.2", features = ["full"] }
bytes = "1"
