[package]
name = "tyml_api_generator"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[[bin]]
name = "tyml-api-gen"
path = "src/bin/tyml_api_gen.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
shellexpand = "3.1.1"
tyml_core = { path = "../tyml/", version = "0.1.3" }
