[package]
name = "tyml_diagnostic"
version = "0.1.0"
edition = "2024"

[dependencies]
tyml_generator = { path = "../tyml_generator/" }
tyml_parser = { path = "../tyml_parser/" }
tyml_source = { path = "../tyml_source/" }
tyml_type = { path = "../tyml_type/" }
tyml_validate = { path = "../tyml_validate/" }
resource = "0.6.0"
toml = "0.8.8"
ariadne = "0.5.0"
regex = "1.11.1"
