# !tyml @cargo/Cargo
[package]
name = "tyml_generator"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[dependencies]
regex = "1.11.1"
extension-fn = "1.2.0"
either = "1.13.0"
tyml_formatter = { path = "../tyml_formatter/", version = "0.1.6" }
tyml_type = { path = "../tyml_type/", version = "0.1.6" }
tyml_validate = { path = "../tyml_validate/", version = "0.1.6" }
tyml_source = { path = "../tyml_source/", version = "0.1.6" }
allocator-api2 = "0.2.21"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
auto_enums = "0.8.7"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["display"] }
shellexpand = "3.1.1"
