# !tyml @cargo/Cargo
[package]
name = "tyml_lsp"
version = "0.1.7"
edition = "2024"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[[bin]]
name = "tyml-lsp-server"
path = "src/bin/server.rs"

[dependencies]
tyml_core = { path = "../tyml/", version = "0.1.6" }
tower-lsp = "0.20.0"
tokio = { version = "1.44.2", features = ["full"] }
regex = "1.11.1"
extension-fn = "1.2.0"
either = "1.13.0"
serde_json = "1.0.142"
