[package]
name = "tyml_mock"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tyml-mock"
path = "src/bin/tyml_mock.rs"

[dependencies]
tyml = { path = "../tyml", version = "0.1.0" }
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.142"
extension-fn = "1.2.0"
tokio = "1.47.1"
reqwest = { version = "0.12", features = ["json"] }
ariadne = "0.5.1"
