# !tyml @cargo/Cargo
[package]
name = "tyml_parser"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[dependencies]
tyml_formatter = { path = "../tyml_formatter/", version = "0.1.3" }
regex = "1.11.1"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
extension-fn = "1.2.0"
either = "1.13.0"
