# !tyml @cargo/Cargo
[package]
name = "tyml_type"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[dependencies]
tyml_parser = { path = "../tyml_parser/", version = "0.1.3" }
hashbrown = "0.15.2"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
proc-macro-regex = "1.1.0"
either = "1.13.0"
regex = "1.11.1"
serde_json = "1.0.142"
