[package]
name = "tyml_validate"
version = "0.1.0"
edition = "2024"

[dependencies]
tyml_parser = { path = "../tyml_parser/" }
tyml_source = { path = "../tyml_source/" }
tyml_type = { path = "../tyml_type/" }
hashbrown = "0.15.2"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
auto_enums = "0.8.7"
