# !tyml @cargo/Cargo
[package]
name = "tyml_validate"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "TYML: type checker for markup language"
repository = "https://github.com/tyml-org/tyml/"

[dependencies]
tyml_parser = { path = "../tyml_parser/", version = "0.1.8" }
tyml_source = { path = "../tyml_source/", version = "0.1.8" }
tyml_type = { path = "../tyml_type/", version = "0.1.8" }
hashbrown = "0.15.2"
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
allocator-api2 = "0.2.21"
auto_enums = "0.8.7"
